# multi-folder-cpp-project

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
inc/sample/: sample.h
inc/shared/: shared.h
inc/static/: static.h
src/: main.cpp  sample.cpp
src/sample/: CMakeLists.txt  sample.cpp  shared.cpp
src/shared/: CMakeLists.txt  shared.cpp
src/static/: CMakeLists.txt  static.cpp
test/: CMakeLists.txt
test/sample/: CMakeLists.txt  sample_test.cpp
test/shared/: CMakeLists.txt  shared.cpp  shared_test.cpp  static_test.cpp
test/static/: CMakeLists.txt
